@@ -9,6 +9,9 @@
      http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x04x07x164654
    * Ffmpeg avicodec logging improved (Peter Smith and Kenneth Lavrsen)
      http://www.lavrsen.dk/twiki/bin/view/Motion/FfmpegAvicodecLogging
+   * Improved upon a few ambiguous log messages which may be emitted by the Event
+     handling code with regards to Ffmpeg (Peter Smith)
+     http://www.lavrsen.dk/twiki/bin/view/Motion/LoggingEventFix
 
 3.2.6 Formal Bugfix Release.
    * Fixed bug where variables time_last_frame and time_current_frame had been
